--- a/css/master.css
+++ b/css/master.css
@@ -1,125 +1,79 @@
-
 @media print {
   html, body {
     width: 210mm;
     height: 297mm;
   }
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+* {
+  margin: auto;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+
+  font-family: "Poppins", sans-serif;
+  font-size: 11px;
+}
 body {
   -webkit-print-color-adjust: exact !important;
-  font-family: "Quicksand", sans-serif;
-  font-size: 11px;
-  margin: 0 auto;
   width: 210mm;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center
 }
 h3 {
-  text-align: center;
-  font-size: 16px;
+  margin: 0 auto;
+  padding: 5px;
+  font-size: 14px;
   font-weight: bold;
-  margin: 7.5px;
+  text-align: center;
 }
 h4 {
-  margin: 0 auto 0 10px;
-  text-align: left;
-  font-style: italic;
-  color: gray;}
-
-label {
-  margin: auto;
-  text-align: center;
-  font-weight: bold;
-}
-
-#bio label { margin: 0; padding-right: 5px;}
-
-[type="text"] {
-  text-transform: uppercase;
-  background-attachment: local;
-  background-image:
-    linear-gradient(to right, white 10px, transparent 10px),
-    linear-gradient(to left, white 10px, transparent 10px),
-    repeating-linear-gradient(white, white 30px, #ccc 30px, #ccc 31px, white 31px);
-  line-height: 31px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: none;
-  width: 100%;
-  overflow: hidden;
- }
-[type="range"] {
-  padding: 5px;
-  margin: auto 5px;
-  overflow: hidden;
-}
-[type="number"] {
-  max-width: 100px;
-  padding: 5px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: none;
- }
-#age,
-#age::-webkit-inner-spin-button,
-#age::-webkit-outer-spin-button {
-  background-attachment: local;
-  background-image:
-    linear-gradient(to right, white 10px, transparent 10px),
-    linear-gradient(to left, white 10px, transparent 10px),
-    repeating-linear-gradient(white, white 30px, #ccc 30px, #ccc 31px, white 31px);
-  line-height: 31px;
-
-  -moz-appearance: textfield;
-  appearance: textfield;
-  -webkit-appearance: none;
   margin: 0;
-  z-index: 5;
+  padding: 5px 0;
+  font-style: italic;
+  text-align: left;
+  color: gray;
 }
-select {
+a { margin: 0; }
+span {
+  margin: 0;
+  width: 100%;
+  vertical-align: middle;
+}
+label { margin: 0; font-weight: bold; }
+#bio label { padding-right: 5px; }
+
+input, textarea {
   border: none;
-  padding: 5px;
+  cursor: pointer;
+  margin: 0;
+  overflow: hidden;
+}
+
+select { width: 100% !important; }
+
+input:focus, textarea:focus { outline: none; }
+
+/*give line*/
+[type="text"], #age, textarea {
   background-attachment: local;
   background-image:
     linear-gradient(to right, white 10px, transparent 10px),
     linear-gradient(to left, white 10px, transparent 10px),
     repeating-linear-gradient(white, white 30px, #ccc 30px, #ccc 31px, white 31px);
   line-height: 31px;
-}
-select:hover { cursor: pointer; }
-
-span {
-  flex: 1;
-  padding: 0 5px;
-  overflow: none;
-  align-items: center;
+  width: 100%;
  }
- textarea {
-   -webkit-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   box-sizing: border-box;
-   border: none;
+textarea { resize: none !important; }
 
-   width: 100%;
-   max-height: 100%;
-   overflow: hidden;
-   resize: none !important;
+[type="text"] {text-transform: uppercase;}
+[type="number"] { max-width: 150px; }
 
-   background-attachment: local;
-   background-image:
-     linear-gradient(to right, white 10px, transparent 10px),
-     linear-gradient(to left, white 10px, transparent 10px),
-     repeating-linear-gradient(white, white 30px, #ccc 30px, #ccc 31px, white 31px);
-   line-height: 31px;
-   padding: 8px 10px;
-   flex: auto;
- }
- textarea:focus { outline: none; }
 
-.main {
-  margin: 15px;
-  display: block;
-}
+/*Base Formatting*/
 .row {
   display: flex;
   flex-flow: row wrap;
@@ -127,45 +81,73 @@ span {
   align-items: stretch;
   margin: 0;
 }
-
 .column {
   height: auto;
-  width: inherit;
   display: flex;
   flex-flow: column wrap;
   flex: 1;
   align-items: stretch;
   margin: 0;
 }
-
 .container {
   min-width: 100px !important;
   border: 2px solid black;
   border-radius: 10px;
   border-collapse: collapse;
-  box-sizing: border-box;
   display: flex;
   flex-flow: column wrap;
   flex: 1;
   margin: 5px;
+  padding: 5px;
 }
-
 .cell {
-  padding: 2px 5px;
+  margin: 0;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+  padding: 5px;
 }
 
-#stats div {flex-flow: column wrap;}
+/*Colour Palette*/
+#palette {
+  margin: 0;
+  position: relative !important;
+  z-index: 5;
+}
+#palette div {
+  margin: 10px 2.5px;
+  border-radius: 50%;
+  border: 2px solid black;
+  border-collapse: collapse;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+}
+#palette div:hover { background-color: #1865CC;}
+#color {
+  border: 0;
+  outline: 0;
+  padding: 0;
+  width: 200%;
+  height: 200%;
+  cursor: pointer;
+  transform: translate(-25%, -25%);
+}
+/*Age Input setting*/
+#age::-webkit-inner-spin-button,
+#age::-webkit-outer-spin-button {
+  -moz-appearance: textfield;
+  appearance: textfield;
+  -webkit-appearance: none;
+}
+/*Stats Column*/
 #myChart { max-width: 200px;}
-.stat {
+.stats, .stat {
+  flex-flow: column wrap;
   align-items: center;
   justify-content: center;
-  position: relative;
-  padding: 5px;
-  margin: 0;
 }
+.stat { position: relative; }
 .statIcon {
   max-width: 45px;
   max-height: 45px;
@@ -188,9 +170,11 @@ span {
   position: absolute;
   top: 0; right: 0;
 }
+
+/*Proficiency*/
 #prof {
-  max-width: 60px !important;
-  height: 60px!important;
+  max-width: 40px !important;
+  height: 40px!important;
   font-size: 20px;
   text-align: center;
   position: relative;
@@ -203,60 +187,24 @@ span {
   -webkit-appearance: none;
   appearance: none;
 }
-#picture {
-  flex: 1 1 auto;
-  font-weight: 500;
-  font-size: 16px;
-  cursor: pointer;
-  color: #cccccc;
-  justify-content: center !important;
-  align-items: center !important;
-  text-align: center;
-  overflow: hidden;
-}
-#picture:hover {
-  background-color: #ddd;
-  color: #ffffff
-}
-#thumb {
-  z-index: 0;
-  object-fit: contain;
-  max-width: inherit;
-  max-height: inherit;
-}
-#palette {
-  margin: 0;
-  position: relative !important;
-  z-index: 5;
-}
 
-#palette div {
-  margin: 10px 2.5px;
-  border-radius: 50%;
-  border: 2px solid black;
-  border-collapse: collapse;
-  width: 40px;
-  height: 40px;
-  overflow: hidden;
-}
-#color {
-  border: 0;
-  outline: 0;
+
+
+/*Personality*/
+table { border: none; margin: 10px auto; }
+th { text-align: center; padding: 5px; }
+td { padding: 0 5px; }
+td:first-child { text-align: right; }
+
+
+.skill {
+  display: inline-block !important;
+  vertical-align: middle;
+  width: auto;
   padding: 0;
-  width: 200%;
-  height: 200%;
-  cursor: pointer;
-  transform: translate(-25%, -25%);
 }
-
-table { border: none; margin: 10px auto;}
-th {text-align: center;}
-td:first-child {text-align: right;}
-
-
-#skills div { display: inline-block !important; vertical-align: middle; }
-#skills div [type="checkbox"] { margin: auto; vertical-align: middle;}
-#skills div div{
+.myCheck { vertical-align: middle; }
+.skill span {
   font-size: 15px;
   font-weight: bold;
   padding: 0 10px;
@@ -267,4 +215,58 @@ td:first-child {text-align: right;}
   display: none;
 }
 
-.bondNames {max-width: 75% !important}
+/*Picture*/
+.drag-image {
+    border: 2px solid black;
+    margin: 5px;
+    height: 250px;
+    width: 250px;
+    overflow: hidden;
+    border-radius: 10px;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column wrap;
+    color: #ddd
+}
+
+.icon { margin: auto auto 0 auto; }
+
+.icon i { font-size: 30px !important; }
+
+.drag-image h6 {
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.drag-image span {
+    font-size: 14px;
+    font-weight: 300;
+    text-align: center;
+}
+
+.drag-image button {
+    padding: 10px 25px;
+    font-size: 14px;
+    font-weight: 300;
+    border: none;
+    outline: none;
+    background: transparent;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.5s
+}
+
+.drag-image button:hover {
+    background-color: #1865CC;
+    color: #fff;
+}
+
+.drag-image img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px
+}
