--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-* {
+*, *::before,*::after {
   margin: auto;
   padding: 0;
   box-sizing: border-box;
@@ -8,6 +8,7 @@
 
   font-family: "Poppins", sans-serif;
   font-size: 11px;
+  box-sizing: border-box;
 }
 @media print {
   @page {size: A5 portrait;}
@@ -16,6 +17,7 @@
     border: none !important;
   }
 }
+
 body {
   -webkit-print-color-adjust: exact !important;
   -moz-print-color-adjust: exact !important;
@@ -76,20 +78,21 @@ textarea {
   background-image:
     linear-gradient(right, transparent 10px, transparent 10px),
     linear-gradient(left, transparent 10px, transparent 10px),
-    repeating-linear-gradient(transparent, transparent 29px, #ccc 29px, #ccc 30px, transparent 30px);
+    repeating-linear-gradient(transparent, transparent 19px, #ccc 19px, #ccc 20px, transparent 20px);
   background-image:
     -webkit-linear-gradient(right, transparent 10px, transparent 10px),
     -webkit-linear-gradient(left, transparent 10px, transparent 10px),
-    -webkit-linear-gradient(transparent, transparent 29px, #ccc 29px, #ccc 30px, transparent 30px);
+    -webkit-linear-gradient(transparent, transparent 19px, #ccc 19px, #ccc 20px, transparent 20px);
   background-image:
     -moz-linear-gradient(right, transparent 10px, transparent 10px),
     -moz-linear-gradient(left, transparent 10px, transparent 10px),
-    -moz-linear-gradient(transparent, transparent 29px, #ccc 29px, #ccc 30px, transparent 30px);
-  background-size: 100% 100%, 100% 100%, 100% 30px;
-  line-height: 30px;
+    -moz-linear-gradient(transparent, transparent 19px, #ccc 19px, #ccc 20px, transparent 20px);
+  background-size: 100% 100%, 100% 100%, 100% 21px;
+  line-height: 20px;
   padding: 5px 0;
   width: 100%;
-  resize: vertical;
+  height: auto;
+  resize: none;
  }
 
 [type="text"], #age {
@@ -138,6 +141,7 @@ textarea {
   position: relative;
 }
 .container {
+  border: 5px solid limegreen;
   background-color: #f2f2f2;
   border-radius: 10px;
   display: flex;
@@ -183,8 +187,7 @@ textarea {
 }
 
 .statNum {
-  min-width: 40px !important;
-  max-width: 40px;
+  width: 
   height: 40px !important;
   border-radius: 50%;
   border: 3.5px solid #000;
@@ -227,7 +230,6 @@ textarea {
 #charisma { background-color: #ED1E79; }
 
 /*Proficiency*/
-
 .hex:before {
     content: " ";
     width: 0; height: 0;
@@ -271,48 +273,42 @@ textarea {
     border-top: 11.6px solid #fff;
 }
 /*shield*/
-.shield {
-    min-width: 40px;
-    max-width: 40x;
-    height: 40px;
-    background-color: #fff;
-    border: 3.5px solid #000;
-    border-radius: 50% 50% 50% 50% / 25% 25% 75% 75%;
-    z-index: 1;
-}
 #level,
 #profMod,
-#p_percept {
-  font-size: 28px;
+#p_percept,
+#armour,
+#initiative {
+  font-size: 25px;
   font-weight: 400;
+  line-height: 1;
   width: 100%;
   height: 100%;
-  background-color: transparent;
+  background-color: #fff;
   text-align: center;
   position: absolute;
   z-index: 5;
 }
 #armour {
- font-size: 20px;
  max-width: 33px;
- font-weight: 400;
+ max-height: 33px;
  background-color: transparent;
- text-align: center;
- z-index: 3;
- position: absolute;
 }
-
+.shield {
+    min-width: 40px;
+    max-width: 40x;
+    height: 40px;
+    background-color: #fff;
+    border: 3px solid #000;
+    border-radius: 50% 50% 50% 50% / 25% 25% 75% 75%;
+    z-index: 1;
+}
 #initiative {
   min-width: 40px !important;
   max-width: 40px;
   height:40px !important;
   border-radius: 20%;
-  border: 3.5px solid #000;
-  font-size: 20px;
-  font-weight: 400;
-  text-align: center;
-  background-color: #fff;
-  z-index: 2;
+  border: 3px solid #000;
+  position: relative;
 }
 #level_label,
 #prof_label,
@@ -320,7 +316,8 @@ textarea {
 #armour_label,
 #initiative_label {
   background-color: #6A6A6A;
-  min-width: 130px;
+  width: auto;
+
 }
 /*Skills*/
 .skill {
@@ -380,7 +377,7 @@ td:first-child { text-align: right; }
 .drag-image img {
     height: 100%;
     width: auto;
-    object-fit: contain;
+    object-fit: cover;
 }
 .drag-image h6 { font-weight: 300;}
 
